--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aouth2.0-client-front",
+  "name": "oauth2.0-client-front",
   "version": "0.1.0",
   "private": true,
   "scripts": {
